--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -56,9 +55,13 @@ header {
 }
 
 /* main section styles */
-main {
+/* main {
     max-width: 1140px;
     margin: 0px auto;
+} */
+.featured-section {
+    text-align: center;
+    padding: 20px 130px;
 }
 
 .first-section-title {
@@ -66,6 +69,7 @@ main {
     text-align: center;
     font-size: 35px;
     font-weight: 800;
+    margin-top: 70px;
 }
 
 .first-section-description {
@@ -73,36 +77,97 @@ main {
     text-align: center;
     font-size: 15px;
     line-height: 30px;
+    margin-top: 20px;
 }
-
-
 
 /* featured section styles  */
 .featured-container {
     display: flex;
-    gap: 25px;
+    align-items: center;
+    justify-content: space-between;
     padding: 30px;
-    position: absolute;
 }
 
 .container-images-1 {
-    width: 400px;
+    width: 380px;
     height: 450px;
     background: rgba(167, 33, 98, 0.15);
     border-radius: 300px 300px 0px 0px;
 }
 
 .container-images-2 {
-    width: 400px;
+    width: 380px;
     height: 450px;
     border-radius: 300px 300px 0px 0px;
     background: rgba(5, 151, 160, 0.15);
-
 }
 
 .container-images-3 {
-    width: 400px;
+    width: 380px;
     height: 450px;
     border-radius: 300px 300px 0px 0px;
     background: rgba(71, 125, 17, 0.15);
+}
+
+.container-images-1 img {
+    margin-top: 173px;
+}
+
+.container-images-2 img {
+    margin-top: 130px;
+}
+
+.container-images-3 img {
+    margin-top: 75px;
+}
+
+.container-images-1 h4 {
+    color: #272727;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+}
+
+.container-images-2 h4 {
+    margin-top: 20px;
+    color: #272727;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+}
+
+.container-images-3 h4 {
+    color: #272727;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+}
+
+/* delivery-section styles */
+
+.delivery-section {
+    max-width: 1050px;
+    margin: 0px auto;
+    background: rgba(39, 39, 39, 0.05);
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    padding: 70px;
+    border-radius: 8px;
+    margin-top: 130px;
+}
+
+.delivery-description {
+    padding: 20px 20px;
+    color: rgba(39, 39, 39, 0.80);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 35px;
 }
