--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header {
     border-radius: 8px;
     border: none;
     font-size: 15px;
-    /* font-weight: 700; */
+    font-weight: 700;
     padding: 15px 30px;
     cursor: pointer;
 }
@@ -158,6 +158,7 @@ header {
     display: flex;
     justify-content: space-between;
     text-align: center;
+    align-items: center;
     padding: 70px;
     border-radius: 8px;
     margin-top: 130px;
@@ -170,4 +171,38 @@ header {
     font-size: 20px;
     font-weight: 600;
     line-height: 35px;
+}
+
+/* offer-section styles */
+
+.offer-section {
+    background-color: rgba(229, 84, 115, 0.05);
+    display: flex;
+    align-items: center;
+    padding: 100px 80px;
+    margin-top: 120px;
+}
+.offer-text{
+    text-align: center;
+    padding: 20px 100px;
+}
+.offer-title {
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.offer-title span {
+    color: rgba(229, 84, 115, 1);
+}
+
+.offer-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 20px;
 }
