--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ header {
     padding: 20px 130px;
 }
 
-.first-section-title {
+.section-title {
     color: #272727;
     text-align: center;
     font-size: 35px;
@@ -72,7 +72,7 @@ header {
     margin-top: 70px;
 }
 
-.first-section-description {
+.section-description {
     color: rgba(39, 39, 39, 0.60);
     text-align: center;
     font-size: 15px;
@@ -182,10 +182,12 @@ header {
     padding: 100px 80px;
     margin-top: 120px;
 }
-.offer-text{
+
+.offer-text {
     text-align: center;
     padding: 20px 100px;
 }
+
 .offer-title {
     color: #272727;
     font-size: 40px;
@@ -206,3 +208,65 @@ header {
     line-height: 30px;
     margin-bottom: 20px;
 }
+
+/* instagram section styles */
+
+.instagram-container {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 130px;
+
+}
+
+/* signup section styles */
+
+.signup-section {
+    max-width: 1060px;
+    margin: 0px auto;
+    display: block;
+    background: url(images/Rectangle\ 9.png);
+    /* text-align: center; */
+    /* align-items: center; */
+    padding: 100px;
+    border-radius: 8px;
+    margin-top: 130px;
+}
+
+.signup-text h2 {
+    text-align: center;
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 15px;
+}
+
+.signup-text p {
+    text-align: center;
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 40px;
+}
+
+
+.signup-box {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    
+}
+
+/* .submit {
+} */
+.submit input {
+    
+    color: rgba(39, 39, 39, 0.60);
+    background: #FFF;
+    border: none;
+    border-radius: 8px;
+    padding: 20px 230px;
+}
+
